--- a/begin.qmd
+++ b/begin.qmd
@@ -12,17 +12,27 @@
 
 2.  *Packages*
 
-3.  *Functions*
+3.  *Reading Data*
 
-4.  *Data Visualization*
+4.  *Tidying Data*
+
+5.  *Building Functions*
+
+6.  *Data Visualization*
 
 ![](images/IMG_5316-02.png)
 
 ### 1. Asking for Help
 
-*Most experts mention asking for help at the end of their tutorials, but I believe it deserves to be first. Learning R involves seeking assistance a lot. There are countless online resources available to answer your questions. Below are some of my favorite resources:*
+*Most experts mention asking for help at the end of their tutorials, but I believe it deserves to be first. Learning R involves seeking a lot of assistance, and there are countless online resources available to answer your questions. Below are some of my favorite resources:*
 
--   ***The Help Center in RStudio**: Located in the bottom right pane of your window, the Help Center provides detailed explanations of each command in R. You can learn about the purpose of each function, as well as their sub-commands and properties.*
+-   ***The Help Center in RStudio**: Located in the bottom right pane of your window, the Help Center provides detailed explanations of each command in R. You can learn about the purpose of each function, as well as their sub-commands and properties. You can also type any command with the `?` symbol in front of it and it will direct you to the same window (e.g., `?plot()`).*
+
+-   ***The R Project Website**: Provides comprehensive documentation and manuals.*
+
+-   ***RStudio Community**: An active forum where you can ask questions.*
+
+-   ***R-Bloggers**:* *A fantastic resource for tutorials, tips, and tricks from the R community.*
 
 -   ***YouTube**: Useful tutorials for visual learners.*
 
@@ -34,7 +44,7 @@
 
 ### 2. Packages
 
-*R packages are collections of functions, data, and documentation that extend the capabilities of base R, making it easier and more efficient to perform a wide range of tasks. Here's a brief overview of what R packages can do for new learners:*
+*R packages are collections of functions, data, and documentation that extend the capabilities of base R, making it easier and more efficient to perform a wide range of tasks.*
 
 -   **Simplify Complex Tasks**
 
@@ -43,10 +53,6 @@
 -   **Enhance Data Analysis**
 
     -   *Packages like `tidyverse` offer tools for data import, tidying, transformation, visualization, and modeling. These integrated tools follow a consistent philosophy, making data analysis more intuitive.*
-
--   **Provide Specialized Tools**
-
-    -   *There are packages for almost every field and application, from bioinformatics (`Bioconductor`) to finance (`quantmod`). These packages provide specialized functions tailored to specific tasks, saving time and effort.*
 
 -   **Improve Data Visualization**
 
@@ -60,7 +66,179 @@
 
     -   *Packages like `dplyr` and `tidyr` help in efficiently handling and processing large datasets. This is particularly useful for big data applications where performance is crucial.*
 
-### 3. Functions
+### 3. Reading data.
+
+#### 1. Loading a file
+
+You can find your data either using the `file.choose()` function or by clicking on `Files` in the bottom right window. Make sure to save your new data in your local `Environment` in the top right window.
+
+#### 2. CSV Files
+
+The most common format for data files is CSV (Comma-Separated Values). The `readr` package from the `tidyverse` provides functions to read CSV files efficiently.
+
+```{r}
+library(tidyverse)
+# Read CSV file
+data <- read.csv("exercise_data.csv")
+```
+
+#### 3. Excel Files
+
+```{r}
+library(readxl)
+
+# Read the first sheet
+data <- read_excel("/Users/owencallahan/Downloads/Fitness.xlsx")
+
+# Read a specific sheet by name
+data_sheet <- read_excel("/Users/owencallahan/Downloads/Fitness.xlsx", sheet = "Sheet1")
+
+# Read a specific sheet by index
+data_index <- read_excel("/Users/owencallahan/Downloads/Fitness.xlsx", sheet = 1)
+```
+
+#### 4. Writing Data
+
+```{r}
+data <- c(1,2,3,4)
+write.csv(data, "my_data.csv")
+```
+
+### 4. Tidying Data
+
+*Tidying data is an essential part of data analysis in R, making your data easier to work with and analyze. We'll use the tidyverse suite of packages, which includes dplyr, tidyr, and readr among others. Below is a step-by-step tutorial with code examples to demonstrate how to tidy data in R.*
+
+#### 1. Structuring Data formats.
+
+**Pivoting longer:**
+
+```{r}
+wide_data <- tibble(
+  id = 1:3,
+  age = c(25, 30, 35),
+  height = c(175, 180, 165),
+  weight = c(70, 80, 65)
+)
+
+# Convert to long format
+long_data <- wide_data %>%
+  pivot_longer(cols = c(age, height, weight), names_to = "measure", values_to = "value")
+
+print(long_data)
+```
+
+**Pivoting wider:**
+
+```{r}
+# Convert back to wide format
+wide_again <- long_data %>%
+  pivot_wider(names_from = measure, values_from = value)
+
+print(wide_again)
+
+```
+
+**Separate columns:**
+
+```{r}
+data <- tibble(
+  name = c("John_Doe", "Jane_Smith", "Alice_Johnson")
+)
+
+# Separate into first and last names
+separated_data <- data %>%
+  separate(name, into = c("first_name", "last_name"), sep = "_")
+
+print(separated_data)
+```
+
+**Unite columns:**
+
+```{r}
+united_data <- separated_data %>%
+  unite("full_name", first_name, last_name, sep = " ")
+```
+
+#### 2. Select, filter, mutate, and summarize data.
+
+**Selecting Columns**
+
+```{r}
+selected_data <- mtcars %>%
+  select(cyl, gear)
+
+head(selected_data)
+```
+
+**Filtering Rows**
+
+```{r}
+filtered_data <- mtcars %>%
+  filter(gear < 4)
+
+head(filtered_data)
+```
+
+**Mutating Columns**
+
+```{r}
+mutated_data <- mtcars %>%
+  mutate(speed.scale = qsec/wt)
+
+head(mutated_data %>%
+        select(speed.scale))
+```
+
+**Summarizing Data**
+
+```{r}
+summary_data <- mtcars %>%
+  group_by(gear) %>%
+  summarize(
+    average_wt = mean(wt),
+    count = n()
+  )
+
+print(summary_data)
+```
+
+#### 3. Handle missing values.
+
+```{r}
+# Identify missing values
+missing_data <- mtcars %>%
+  filter(is.na(wt))
+
+# Remove rows with missing values
+cleaned_data <- data %>%
+  drop_na()
+
+# Replace missing values with a specific value
+filled_data <- data %>%
+  replace_na(list(height = 170, weight = 70))
+```
+
+#### 4. Combine datasets.
+
+```{r}
+data1 <- tibble(
+  id = 1:3,
+  name = c("John", "Jane", "Alice")
+)
+
+data2 <- tibble(
+  id = 1:3,
+  score = c(85, 90, 78)
+)
+
+# Inner join
+joined_data <- data1 %>%
+  inner_join(data2, by = "id")
+
+print(joined_data)
+```
+
+### 5. Building Functions
 
 *When I learned how to create my own functions, I felt like the creative side of R expanded beyond my expectations. I could tailor a command to address exactly what I needed to perform on a given set of data.*
 
@@ -105,7 +283,7 @@ average <- calculate_mean(sample_data)
 print(average)
 ```
 
-### 4. Data Visualization
+### 6. Data Visualization
 
 *Let's explore one of my favorite, and also one of the most essential packages in R, `ggplot2`.*
 
@@ -135,7 +313,9 @@ library(ggplot2)
 
 -   ***Coordinate Systems**: Control the coordinate space.*
 
--   ***Themes**: Control the appearance of the plot.3. Basic Plot Types*
+-   ***Themes**: Control the appearance of the plot.*
+
+#### 3. Basic Plot Types
 
 **Scatter Plot**
 
