--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ Explore my portfolio of R projects, where I showcase my data analysis, visualiza
 
 ## Learn R
 
-If you're new to R, you've come to the right place. Here, I provide beginner-friendly tutorials and resources to help you navigate the basics of R programming.
+If you're new to R or if you are a part of my tutoring program, you've come to the right place. Here, I provide beginner-friendly tutorials and resources to help you navigate the basics of R programming.
 
 ## Connect with Me
 
